--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>   
-    <canvas id="canvas" style="width:100%;height: 100%"></canvas>
+    <canvas id="canvas" style="width:500px;height: 500px"></canvas>
 </body>
 <script src="main.js"></script>
 </html>
